--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "file-loader": "^3.0.1",
     "jquery": "^3.4.1",
     "node-gyp": "^4.0.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.12.0",
     "popper.js": "^1.15.0",
     "qrcode": "^1.4.1",
     "sass-loader": "^7.3.1",
