--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ build/*
 .eggs/*
 static/gifs/*
 *.mp4
-*.gif
-static/backgrounds/*
+*.jpg
 node_modules/*
 package-lock.json
 DCIDMap.xml
@@ -23,4 +22,6 @@ static/data2.json
 *.map
 static/fonts/*
 static/*.js*
-config/*
+.env
+config.json
+*.log
